--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -9,13 +9,13 @@
 .spacer {
   width: 100%;
   height: 50px;
-  border: 1px solid blue;
+
 }
 
 .scorebox {
   width: 100%;
   height: 50px;
-  border: 1px solid blue;
+
 }
 
 #canvas {
@@ -34,8 +34,27 @@
   /* display: flex; */
   height: 100%;
   width: 100%;
+  z-index: -infinity;
 }
 
 .explosion {
   border-radius: 50px;
+}
+
+.hidden {
+  display: none;
+}
+
+body {
+  background-image: url("../images/bg-pic.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#welcome-page {
+position: absolute;
+left: 50%;
+top: 50%;
+transform: translate(-50%, -50%);
+padding: 10px;
 }
